--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "NodeJS scraper for Wikipedia help desk archives",
   "main": "index.js",
   "scripts": {
-    "start": "node script.js"
+    "start": "nodemon ./script.js localhost 8080"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
+    "convert-array-to-csv": "^2.0.0",
     "date-fns": "^2.25.0",
     "fs": "0.0.1-security",
     "request": "^2.88.2",
